--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
-appPort = 3000
-TYPEORM_CONNECTION = postgres
-TYPEORM_HOST = 127.0.0.1
-TYPEORM_USERNAME = postgres
-TYPEORM_PASSWORD = jehovah205
-TYPEORM_PORT = 5432
-TYPEORM_DATABASE = speedpowernest
-TYPEORM_SYNCHRONIZE = false
-TYPEORM_ENTITIES = dist/src/**/*.entity.js
-TYPEORM_MIGRATIONS = dist/src/migrations/*.js
-TYPEORM_MIGRATIONS_DIR = src/migrations
-
+appPort=3000
+TYPEORM_CONNECTION=postgres
+TYPEORM_HOST=127.0.0.1
+TYPEORM_USERNAME=postgres
+TYPEORM_PASSWORD=jehovah205
+TYPEORM_PORT=5432
+TYPEORM_DATABASE=speedpowernest
+TYPEORM_SYNCHRONIZE=false
+TYPEORM_ENTITIES=dist/src/**/*.entity.js
+TYPEORM_MIGRATIONS=dist/src/migrations/*.js
+TYPEORM_MIGRATIONS_DIR=src/migrations
+JWT_SECRET=jwt2022@@@
