--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ TYPEORM_ENTITIES=dist/src/**/*.entity.js
 TYPEORM_MIGRATIONS=dist/src/migrations/*.js
 TYPEORM_MIGRATIONS_DIR=src/migrations
 JWT_SECRET=jwt2022@@@
+JWT_EXPIRES=3600
